--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "Add new post", new_post_path %></li>
+            <li><%= link_to "Sign up", new_user_path %></li>
           </ul>
         </nav>
       </div>
