--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,7 +10,7 @@
     <%= f.text_field :email, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :pasword %>
+    <%= f.label :password %>
     <%= f.password_field :password, class: "form-control" %>
   </div>
   <div class="form-group">
